[tool.poetry]
name = "examples"
version = "1.0.0"
description = "Example usage of ranged_heap pkg"
authors = ["giuambro97 <giuambro97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ranged-heap = {path = "../ranged_heap", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.282"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
