[tool.poetry]
name = "ranged_heap"
version = "0.1.0"
description = "RangedHeap data structure"
authors = ["Giuseppe Ambrosio <giuambro97@gmail.com>"]
maintainers = ["Giuseppe Ambrosio <giuambro97@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ranged_heap"}]
repository = "https://github.com/giuseppeambrosio97/ranged-heap"
keywords = [
    "datastructure",
    "heap",
    "greedy-algorithm"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
ruff = "^0.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-include-markdown-plugin = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
